--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-," />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/jpeg" href="https://i.ibb.co/rG8JZTG0/header.jpg" />
+    <link rel="shortcut icon" type="image/jpeg" href="https://i.ibb.co/rG8JZTG0/header.jpg" />
+    <link rel="apple-touch-icon" href="https://i.ibb.co/rG8JZTG0/header.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
